Fix spacing for privacy dropdown dialog.

--- a/app/assets/stylesheets/editor-3/privacy-dropdown.css.scss
+++ b/app/assets/stylesheets/editor-3/privacy-dropdown.css.scss
@@ -26,7 +26,7 @@
 
 .Editor-PrivacyDialog {
   position: absolute;
-  top: 24px;
+  top: $baseSize * 4;
   right: 0;
   left: 0;
   width: 248px;
